# zxcv

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  flake.nix  justfile  pyproject.toml
notebooks/: 1. Two Sum.ipynb  10. Regular Expression Matching.ipynb  11. Container With Most Water.ipynb  12. Integer To Roman.ipynb  13. Roman to Integer.ipynb  14. Longest Common Prefix.ipynb  15. 3Sum.ipynb  16. 3Sum Closest.ipynb  17. Letter Combinations of a Phone Number.ipynb  18. 4Sum.ipynb  19. Remove Nth Node From End of List.ipynb  2. Add Two Numbers.ipynb  20. Valid Parentheses.ipynb  21. Merge Two Sorted Lists.ipynb  22. Generate Parentheses.ipynb  23. Merge k Sorted Lists.ipynb  24. Swap Nodes in Pairs.ipynb  242. Valid Anagram.ipynb  25. Reverse Nodes in k-Group.ipynb  26. Remove Duplicates from Sorted Array.ipynb  27. Remove Element.ipynb  28. Find the Index of the First Occurrence in a String.ipynb  29. Divide Two Integers.ipynb  3. Longest Substring Without Repeating Characters.ipynb  30. Substring with Concatenation of All Words.ipynb  31. Next Permutation.ipynb  32. Longest Valid Parentheses.ipynb  33. Search in Rotated Sorted Array.ipynb  34. Find First and Last Position of Element in Sorted Array.ipynb  35. Search Insert Position.ipynb  36. Valid Sudoku.ipynb  37. Sudoku Solver.ipynb  38. Count and Say.ipynb  39. Combination Sum.ipynb  4. Median of Two Sorted Arrays.ipynb  40. Combination Sum II.ipynb  41. First Missing Positive.ipynb  42. Trapping Rain Water.ipynb  43. Multiply Strings.ipynb  44. Wildcard Matching.ipynb  (+12 more)
tests/: test_addition.py  (+1 more)
(+3 files in other folders)
