[tool.poetry]
name = "python-workspace"
version = "0.1.0"
description = "A batteries-included high-efficiency quick-and-dirty Python workbench."
authors = ["data-miner00 <data-miner00@users.noreply.github.com>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
notebook = "^7.1.2"
matplotlib = "^3.8.4"
parsel = "^1.9.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
ruff = "^0.3.5"
black = "^24.3.0"
codespell = "^2.2.6"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
