[tool.poetry]
name = "zxcv"
version = "0.1.0"
description = "I hate Leetcode. I hate DSA. So I want to master it. I want to tell myself a story."
authors = ["data-miner00 <data-miner00@users.noreply.github.com>"]
license = "WTFPL"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.31.0"
numpy = "^1.26.4"
pandas = "^2.2.1"
notebook = "^7.1.2"
matplotlib = "^3.8.4"
parsel = "^1.9.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.3.5"
black = "^24.3.0"
codespell = "^2.2.6"
isort = "^5.13.2"
pytest = "^8.3.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]
